// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billing selectors getAutomationPrices should return the Automate prices 1`] = `
[
  {
    "amount": 3000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.2,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-basic-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Basic",
    "num_quota_tickets": 30,
    "price_id": "price_1LJBjXI9qXomtXqSSX34F3we",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 18000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-pro-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Pro",
    "num_quota_tickets": 190,
    "price_id": "price_1LJBjbI9qXomtXqS2sfi1J7P",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 30000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.2,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-basic-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Basic",
    "num_quota_tickets": 360,
    "price_id": "price_1LJBjZI9qXomtXqSPNgkEZpl",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 45000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-advanced-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Advanced",
    "num_quota_tickets": 530,
    "price_id": "price_1LJBjeI9qXomtXqSXRjmhPsL",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 180000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-pro-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Pro",
    "num_quota_tickets": 2280,
    "price_id": "price_1LJBjdI9qXomtXqSlp9sh6iQ",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 450000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-advanced-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Advanced",
    "num_quota_tickets": 6360,
    "price_id": "price_1LJBjgI9qXomtXqSBZoBcg7G",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
]
`;

exports[`billing selectors getCheapestProductPrices should return the cheapest product prices 1`] = `
{
  "automation": {
    "amount": 3000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.2,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-basic-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Basic",
    "num_quota_tickets": 30,
    "price_id": "price_1LJBjXI9qXomtXqSSX34F3we",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  "convert": {
    "amount": 3000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-01-monthly-usd-5",
    "interval": "month",
    "name": "Convert 50 Monthly",
    "num_quota_tickets": 50,
    "price_id": "price_1NdBiMI9qXomtXqSX8MxFkYW",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 1,
  },
  "helpdesk": {
    "amount": 6000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.4,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": false,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 1,
      },
      "revenue_statistics": {
        "enabled": false,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": false,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "basic-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Basic",
    "num_quota_tickets": 300,
    "price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  "sms": {
    "amount": 90,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.2,
    "internal_id": "sms-addon-03-monthly-usd-4",
    "interval": "month",
    "name": "SMS Addon 150 Monthly",
    "num_quota_tickets": 150,
    "price_id": "price_1LkBzKI9qXomtXqSEXrSV8o4",
    "product": "sms",
    "product_id": "prod_MT8Fzk7vmcT73m",
    "public": true,
  },
  "voice": {
    "amount": 175,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.4,
    "internal_id": "voc-addon-04-monthly-usd-4",
    "interval": "month",
    "name": "Voice Addon 250 Monthly",
    "num_quota_tickets": 250,
    "price_id": "price_1LkAzlI9qXomtXqSxOOrhzcU",
    "product": "voice",
    "product_id": "prod_MT6fyh00TCFRGZ",
    "public": true,
  },
}
`;

exports[`billing selectors getCurrentProductsFeatures should return the current features 1`] = `
{
  "api_1st_party_rate_limit": {
    "enabled": true,
    "rate_limit": {
      "interval_ms": 2000,
      "max_burst": 40,
    },
  },
  "api_3rd_party_rate_limit": {
    "enabled": true,
    "rate_limit": {
      "interval_ms": 20000,
      "max_burst": 40,
    },
  },
  "auto_assignment": {
    "enabled": true,
  },
  "automation_addon_overview": {
    "enabled": false,
  },
  "automation_cancellations_flow": {
    "enabled": true,
  },
  "automation_managed_rules": {
    "enabled": true,
  },
  "automation_report_issue_flow": {
    "enabled": true,
  },
  "automation_return_flow": {
    "enabled": true,
  },
  "automation_self_service_statistics": {
    "enabled": true,
  },
  "automation_track_order_flow": {
    "enabled": true,
  },
  "facebook_comment": {
    "enabled": true,
  },
  "help_center": {
    "enabled": true,
  },
  "instagram_comment": {
    "enabled": true,
  },
  "instagram_dm": {
    "enabled": true,
  },
  "magento_integration": {
    "enabled": false,
  },
  "overview_live_statistics": {
    "enabled": true,
  },
  "phone_number": {
    "enabled": true,
    "limit": 1,
  },
  "revenue_statistics": {
    "enabled": false,
  },
  "satisfaction_surveys": {
    "enabled": true,
  },
  "teams": {
    "enabled": true,
  },
  "twitter_integration": {
    "enabled": false,
    "limit": 0,
  },
  "user_roles": {
    "enabled": true,
  },
  "users_live_statistics": {
    "enabled": false,
  },
  "view_sharing": {
    "enabled": true,
  },
  "yotpo_integration": {
    "enabled": true,
  },
}
`;

exports[`billing selectors getHelpdeskPrices should return the helpdesk prices 1`] = `
[
  {
    "amount": 6000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.4,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": false,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 1,
      },
      "revenue_statistics": {
        "enabled": false,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": false,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "basic-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Basic",
    "num_quota_tickets": 300,
    "price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 36000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 3,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "pro-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Pro",
    "num_quota_tickets": 2000,
    "price_id": "price_1LJBjaI9qXomtXqSvYfzmmEU",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 60000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.4,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": false,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 1,
      },
      "revenue_statistics": {
        "enabled": false,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": false,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "basic-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Basic",
    "num_quota_tickets": 3600,
    "price_id": "price_1LJBjYI9qXomtXqSLEjOrpmV",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 90000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 10,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": true,
        "limit": 2,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "advanced-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Advanced",
    "num_quota_tickets": 5000,
    "price_id": "price_1LJBjdI9qXomtXqS8RzPPA7K",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 360000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 3,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "pro-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Pro",
    "num_quota_tickets": 24000,
    "price_id": "price_1LJBjbI9qXomtXqShB9YLy7V",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 900000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 10,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": true,
        "limit": 2,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "advanced-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Advanced",
    "num_quota_tickets": 60000,
    "price_id": "price_1LJBjfI9qXomtXqSeKJ5lJjD",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
]
`;

exports[`billing selectors getPrices should return the prices 1`] = `
[
  {
    "amount": 0,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.6,
    "internal_id": "sms-addon-00-monthly-usd-4",
    "interval": "month",
    "name": "SMS Addon Trial Monthly",
    "num_quota_tickets": 0,
    "price_id": "price_1M6V7uI9qXomtXqSpsoVQWUw",
    "product": "sms",
    "product_id": "prod_MT8Fzk7vmcT73m",
    "public": true,
  },
  {
    "amount": 0,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 2.4,
    "internal_id": "voc-addon-00-monthly-usd-4",
    "interval": "month",
    "name": "Voice Addon Trial Monthly",
    "num_quota_tickets": 0,
    "price_id": "price_1LkClqI9qXomtXqSlgYCG6Wm",
    "product": "voice",
    "product_id": "prod_MT6fyh00TCFRGZ",
    "public": true,
  },
  {
    "amount": 0,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1,
    "internal_id": "convert-00-monthly-usd-5",
    "interval": "month",
    "name": "Convert Trial Monthly",
    "num_quota_tickets": 0,
    "price_id": "price_1NdBfmI9qXomtXqSFfC7T2xX",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 0,
  },
  {
    "amount": 90,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.2,
    "internal_id": "sms-addon-03-monthly-usd-4",
    "interval": "month",
    "name": "SMS Addon 150 Monthly",
    "num_quota_tickets": 150,
    "price_id": "price_1LkBzKI9qXomtXqSEXrSV8o4",
    "product": "sms",
    "product_id": "prod_MT8Fzk7vmcT73m",
    "public": true,
  },
  {
    "amount": 175,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.4,
    "internal_id": "voc-addon-04-monthly-usd-4",
    "interval": "month",
    "name": "Voice Addon 250 Monthly",
    "num_quota_tickets": 250,
    "price_id": "price_1LkAzlI9qXomtXqSxOOrhzcU",
    "product": "voice",
    "product_id": "prod_MT6fyh00TCFRGZ",
    "public": true,
  },
  {
    "amount": 200,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 1.5,
    "internal_id": "sms-01-flat-yearly-usd-5",
    "interval": "month",
    "name": "SMS Addon 300 Yearly",
    "num_quota_tickets": 300,
    "price_id": "price_1O9Vc7I9qXomtXqS4a8p3S7e",
    "product": "sms",
    "product_id": "prod_MT8Fzk7vmcT73m",
    "public": true,
  },
  {
    "amount": 1750,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.47,
    "internal_id": "voc-addon-10-monthly-usd-4",
    "interval": "month",
    "name": "Voice Addon 7500 Monthly",
    "num_quota_tickets": 7500,
    "price_id": "price_1LkB44I9qXomtXqS4aF9ibna",
    "product": "voice",
    "product_id": "prod_MT6fyh00TCFRGZ",
    "public": true,
  },
  {
    "amount": 3000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.2,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-basic-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Basic",
    "num_quota_tickets": 30,
    "price_id": "price_1LJBjXI9qXomtXqSSX34F3we",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 3000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 2.2,
    "internal_id": "voice-01-flat-yearly-usd-5",
    "interval": "month",
    "name": "Voice Addon 300 Yearly",
    "num_quota_tickets": 300,
    "price_id": "price_1O9TX8I9qXomtXqSR9drzVqz",
    "product": "voice",
    "product_id": "prod_MT6fyh00TCFRGZ",
    "public": true,
  },
  {
    "amount": 3000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-01-monthly-usd-5",
    "interval": "month",
    "name": "Convert 50 Monthly",
    "num_quota_tickets": 50,
    "price_id": "price_1NdBiMI9qXomtXqSX8MxFkYW",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 1,
  },
  {
    "amount": 5768,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.77,
    "internal_id": "sms-addon-12-monthly-usd-4",
    "interval": "month",
    "name": "SMS Addon 15000 Monthly",
    "num_quota_tickets": 15000,
    "price_id": "price_1LkBzLI9qXomtXqSgzXlOnP4",
    "product": "sms",
    "product_id": "prod_MT8Fzk7vmcT73m",
    "public": true,
  },
  {
    "amount": 6000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.4,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": false,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 1,
      },
      "revenue_statistics": {
        "enabled": false,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": false,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "basic-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Basic",
    "num_quota_tickets": 300,
    "price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 18000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-pro-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Pro",
    "num_quota_tickets": 190,
    "price_id": "price_1LJBjbI9qXomtXqS2sfi1J7P",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 25000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-02-monthly-usd-5",
    "interval": "month",
    "name": "Convert 500 Monthly",
    "num_quota_tickets": 500,
    "price_id": "price_1NdXfXI9qXomtXqS0CDMe7Yy",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 2,
  },
  {
    "amount": 30000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.2,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-basic-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Basic",
    "num_quota_tickets": 360,
    "price_id": "price_1LJBjZI9qXomtXqSPNgkEZpl",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 36000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 3,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "pro-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Pro",
    "num_quota_tickets": 2000,
    "price_id": "price_1LJBjaI9qXomtXqSvYfzmmEU",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 36000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-01-yearly-usd-6",
    "interval": "year",
    "name": "Convert 600 Yearly",
    "num_quota_tickets": 600,
    "price_id": "price_2NmZrmH2GG3UYmlxBGfOOSL1",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 1,
  },
  {
    "amount": 45000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-advanced-full-price-monthly-usd-4",
    "interval": "month",
    "name": "Advanced",
    "num_quota_tickets": 530,
    "price_id": "price_1LJBjeI9qXomtXqSXRjmhPsL",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 60000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.4,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": false,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 1,
      },
      "revenue_statistics": {
        "enabled": false,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": false,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "basic-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Basic",
    "num_quota_tickets": 3600,
    "price_id": "price_1LJBjYI9qXomtXqSLEjOrpmV",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 80000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-03-monthly-usd-5",
    "interval": "month",
    "name": "Convert 2,000 Monthly",
    "num_quota_tickets": 2000,
    "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSLS",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 3,
  },
  {
    "amount": 90000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 10,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": true,
        "limit": 2,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "advanced-monthly-usd-4",
    "interval": "month",
    "is_legacy": false,
    "name": "Advanced",
    "num_quota_tickets": 5000,
    "price_id": "price_1LJBjdI9qXomtXqS8RzPPA7K",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 110000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-04-monthly-usd-6",
    "interval": "month",
    "name": "Convert 2,000 Monthly",
    "num_quota_tickets": 2000,
    "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSL2",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 4,
  },
  {
    "amount": 157500,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0,
    "internal_id": "convert-05-monthly-usd-6",
    "interval": "month",
    "name": "Convert 3,000 Monthly",
    "num_quota_tickets": 3000,
    "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSL1",
    "product": "convert",
    "product_id": "prod_Mwy3exdalDFouZ",
    "public": true,
    "tier": 5,
  },
  {
    "amount": 180000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-pro-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Pro",
    "num_quota_tickets": 2280,
    "price_id": "price_1LJBjdI9qXomtXqSlp9sh6iQ",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 360000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 3,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": false,
        "limit": 0,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "pro-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Pro",
    "num_quota_tickets": 24000,
    "price_id": "price_1LJBjbI9qXomtXqShB9YLy7V",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
  {
    "amount": 450000,
    "cadence": "year",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.18,
    "features": {
      "automation_cancellations_flow": {
        "enabled": true,
      },
      "automation_managed_rules": {
        "enabled": true,
      },
      "automation_report_issue_flow": {
        "enabled": true,
      },
      "automation_return_flow": {
        "enabled": true,
      },
      "automation_self_service_statistics": {
        "enabled": true,
      },
      "automation_track_order_flow": {
        "enabled": true,
      },
    },
    "internal_id": "aut-addon-advanced-full-price-yearly-usd-4",
    "interval": "year",
    "name": "Advanced",
    "num_quota_tickets": 6360,
    "price_id": "price_1LJBjgI9qXomtXqSBZoBcg7G",
    "product": "automation",
    "product_id": "prod_LsHD5xmSqoFBBs",
    "public": true,
  },
  {
    "amount": 900000,
    "cadence": "month",
    "currency": "usd",
    "custom": false,
    "extra_ticket_cost": 0.36,
    "features": {
      "api_1st_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 2000,
          "max_burst": 40,
        },
      },
      "api_3rd_party_rate_limit": {
        "enabled": true,
        "rate_limit": {
          "interval_ms": 20000,
          "max_burst": 40,
        },
      },
      "auto_assignment": {
        "enabled": true,
      },
      "automation_addon_overview": {
        "enabled": false,
      },
      "automation_cancellations_flow": {
        "enabled": false,
      },
      "automation_managed_rules": {
        "enabled": false,
      },
      "automation_report_issue_flow": {
        "enabled": false,
      },
      "automation_return_flow": {
        "enabled": false,
      },
      "automation_self_service_statistics": {
        "enabled": false,
      },
      "automation_track_order_flow": {
        "enabled": false,
      },
      "facebook_comment": {
        "enabled": true,
      },
      "help_center": {
        "enabled": true,
      },
      "instagram_comment": {
        "enabled": true,
      },
      "instagram_dm": {
        "enabled": true,
      },
      "magento_integration": {
        "enabled": true,
      },
      "overview_live_statistics": {
        "enabled": true,
      },
      "phone_number": {
        "enabled": true,
        "limit": 10,
      },
      "revenue_statistics": {
        "enabled": true,
      },
      "satisfaction_surveys": {
        "enabled": true,
      },
      "teams": {
        "enabled": true,
      },
      "twitter_integration": {
        "enabled": true,
        "limit": 2,
      },
      "user_roles": {
        "enabled": true,
      },
      "users_live_statistics": {
        "enabled": true,
      },
      "view_sharing": {
        "enabled": true,
      },
      "yotpo_integration": {
        "enabled": true,
      },
    },
    "integrations": 150,
    "internal_id": "advanced-yearly-usd-4",
    "interval": "year",
    "is_legacy": false,
    "name": "Advanced",
    "num_quota_tickets": 60000,
    "price_id": "price_1LJBjfI9qXomtXqSeKJ5lJjD",
    "product": "helpdesk",
    "product_id": "prod_LsH6kV35G6zKWo",
    "public": true,
  },
]
`;

exports[`billing selectors getProducts should return products 1`] = `
[
  {
    "id": "prod_LsH6kV35G6zKWo",
    "prices": [
      {
        "amount": 6000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.4,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": false,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 1,
          },
          "revenue_statistics": {
            "enabled": false,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": false,
            "limit": 0,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": false,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "basic-monthly-usd-4",
        "interval": "month",
        "is_legacy": false,
        "name": "Basic",
        "num_quota_tickets": 300,
        "price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
      {
        "amount": 60000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.4,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": false,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 1,
          },
          "revenue_statistics": {
            "enabled": false,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": false,
            "limit": 0,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": false,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "basic-yearly-usd-4",
        "interval": "year",
        "is_legacy": false,
        "name": "Basic",
        "num_quota_tickets": 3600,
        "price_id": "price_1LJBjYI9qXomtXqSLEjOrpmV",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
      {
        "amount": 36000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.36,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": true,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 3,
          },
          "revenue_statistics": {
            "enabled": true,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": false,
            "limit": 0,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": true,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "pro-monthly-usd-4",
        "interval": "month",
        "is_legacy": false,
        "name": "Pro",
        "num_quota_tickets": 2000,
        "price_id": "price_1LJBjaI9qXomtXqSvYfzmmEU",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
      {
        "amount": 360000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.36,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": true,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 3,
          },
          "revenue_statistics": {
            "enabled": true,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": false,
            "limit": 0,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": true,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "pro-yearly-usd-4",
        "interval": "year",
        "is_legacy": false,
        "name": "Pro",
        "num_quota_tickets": 24000,
        "price_id": "price_1LJBjbI9qXomtXqShB9YLy7V",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
      {
        "amount": 90000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.36,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": true,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 10,
          },
          "revenue_statistics": {
            "enabled": true,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": true,
            "limit": 2,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": true,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "advanced-monthly-usd-4",
        "interval": "month",
        "is_legacy": false,
        "name": "Advanced",
        "num_quota_tickets": 5000,
        "price_id": "price_1LJBjdI9qXomtXqS8RzPPA7K",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
      {
        "amount": 900000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.36,
        "features": {
          "api_1st_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 2000,
              "max_burst": 40,
            },
          },
          "api_3rd_party_rate_limit": {
            "enabled": true,
            "rate_limit": {
              "interval_ms": 20000,
              "max_burst": 40,
            },
          },
          "auto_assignment": {
            "enabled": true,
          },
          "automation_addon_overview": {
            "enabled": false,
          },
          "automation_cancellations_flow": {
            "enabled": false,
          },
          "automation_managed_rules": {
            "enabled": false,
          },
          "automation_report_issue_flow": {
            "enabled": false,
          },
          "automation_return_flow": {
            "enabled": false,
          },
          "automation_self_service_statistics": {
            "enabled": false,
          },
          "automation_track_order_flow": {
            "enabled": false,
          },
          "facebook_comment": {
            "enabled": true,
          },
          "help_center": {
            "enabled": true,
          },
          "instagram_comment": {
            "enabled": true,
          },
          "instagram_dm": {
            "enabled": true,
          },
          "magento_integration": {
            "enabled": true,
          },
          "overview_live_statistics": {
            "enabled": true,
          },
          "phone_number": {
            "enabled": true,
            "limit": 10,
          },
          "revenue_statistics": {
            "enabled": true,
          },
          "satisfaction_surveys": {
            "enabled": true,
          },
          "teams": {
            "enabled": true,
          },
          "twitter_integration": {
            "enabled": true,
            "limit": 2,
          },
          "user_roles": {
            "enabled": true,
          },
          "users_live_statistics": {
            "enabled": true,
          },
          "view_sharing": {
            "enabled": true,
          },
          "yotpo_integration": {
            "enabled": true,
          },
        },
        "integrations": 150,
        "internal_id": "advanced-yearly-usd-4",
        "interval": "year",
        "is_legacy": false,
        "name": "Advanced",
        "num_quota_tickets": 60000,
        "price_id": "price_1LJBjfI9qXomtXqSeKJ5lJjD",
        "product": "helpdesk",
        "product_id": "prod_LsH6kV35G6zKWo",
        "public": true,
      },
    ],
    "type": "helpdesk",
  },
  {
    "id": "prod_LsHD5xmSqoFBBs",
    "prices": [
      {
        "amount": 3000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.2,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-basic-full-price-monthly-usd-4",
        "interval": "month",
        "name": "Basic",
        "num_quota_tickets": 30,
        "price_id": "price_1LJBjXI9qXomtXqSSX34F3we",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
      {
        "amount": 30000,
        "cadence": "year",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.2,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-basic-full-price-yearly-usd-4",
        "interval": "year",
        "name": "Basic",
        "num_quota_tickets": 360,
        "price_id": "price_1LJBjZI9qXomtXqSPNgkEZpl",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
      {
        "amount": 18000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.18,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-pro-full-price-monthly-usd-4",
        "interval": "month",
        "name": "Pro",
        "num_quota_tickets": 190,
        "price_id": "price_1LJBjbI9qXomtXqS2sfi1J7P",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
      {
        "amount": 180000,
        "cadence": "year",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.18,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-pro-full-price-yearly-usd-4",
        "interval": "year",
        "name": "Pro",
        "num_quota_tickets": 2280,
        "price_id": "price_1LJBjdI9qXomtXqSlp9sh6iQ",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
      {
        "amount": 45000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.18,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-advanced-full-price-monthly-usd-4",
        "interval": "month",
        "name": "Advanced",
        "num_quota_tickets": 530,
        "price_id": "price_1LJBjeI9qXomtXqSXRjmhPsL",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
      {
        "amount": 450000,
        "cadence": "year",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.18,
        "features": {
          "automation_cancellations_flow": {
            "enabled": true,
          },
          "automation_managed_rules": {
            "enabled": true,
          },
          "automation_report_issue_flow": {
            "enabled": true,
          },
          "automation_return_flow": {
            "enabled": true,
          },
          "automation_self_service_statistics": {
            "enabled": true,
          },
          "automation_track_order_flow": {
            "enabled": true,
          },
        },
        "internal_id": "aut-addon-advanced-full-price-yearly-usd-4",
        "interval": "year",
        "name": "Advanced",
        "num_quota_tickets": 6360,
        "price_id": "price_1LJBjgI9qXomtXqSBZoBcg7G",
        "product": "automation",
        "product_id": "prod_LsHD5xmSqoFBBs",
        "public": true,
      },
    ],
    "type": "automation",
  },
  {
    "id": "prod_MT8Fzk7vmcT73m",
    "prices": [
      {
        "amount": 90,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 1.2,
        "internal_id": "sms-addon-03-monthly-usd-4",
        "interval": "month",
        "name": "SMS Addon 150 Monthly",
        "num_quota_tickets": 150,
        "price_id": "price_1LkBzKI9qXomtXqSEXrSV8o4",
        "product": "sms",
        "product_id": "prod_MT8Fzk7vmcT73m",
        "public": true,
      },
      {
        "amount": 5768,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.77,
        "internal_id": "sms-addon-12-monthly-usd-4",
        "interval": "month",
        "name": "SMS Addon 15000 Monthly",
        "num_quota_tickets": 15000,
        "price_id": "price_1LkBzLI9qXomtXqSgzXlOnP4",
        "product": "sms",
        "product_id": "prod_MT8Fzk7vmcT73m",
        "public": true,
      },
      {
        "amount": 200,
        "cadence": "year",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 1.5,
        "internal_id": "sms-01-flat-yearly-usd-5",
        "interval": "month",
        "name": "SMS Addon 300 Yearly",
        "num_quota_tickets": 300,
        "price_id": "price_1O9Vc7I9qXomtXqS4a8p3S7e",
        "product": "sms",
        "product_id": "prod_MT8Fzk7vmcT73m",
        "public": true,
      },
      {
        "amount": 0,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 1.6,
        "internal_id": "sms-addon-00-monthly-usd-4",
        "interval": "month",
        "name": "SMS Addon Trial Monthly",
        "num_quota_tickets": 0,
        "price_id": "price_1M6V7uI9qXomtXqSpsoVQWUw",
        "product": "sms",
        "product_id": "prod_MT8Fzk7vmcT73m",
        "public": true,
      },
    ],
    "type": "sms",
  },
  {
    "id": "prod_MT6fyh00TCFRGZ",
    "prices": [
      {
        "amount": 175,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 1.4,
        "internal_id": "voc-addon-04-monthly-usd-4",
        "interval": "month",
        "name": "Voice Addon 250 Monthly",
        "num_quota_tickets": 250,
        "price_id": "price_1LkAzlI9qXomtXqSxOOrhzcU",
        "product": "voice",
        "product_id": "prod_MT6fyh00TCFRGZ",
        "public": true,
      },
      {
        "amount": 1750,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0.47,
        "internal_id": "voc-addon-10-monthly-usd-4",
        "interval": "month",
        "name": "Voice Addon 7500 Monthly",
        "num_quota_tickets": 7500,
        "price_id": "price_1LkB44I9qXomtXqS4aF9ibna",
        "product": "voice",
        "product_id": "prod_MT6fyh00TCFRGZ",
        "public": true,
      },
      {
        "amount": 3000,
        "cadence": "year",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 2.2,
        "internal_id": "voice-01-flat-yearly-usd-5",
        "interval": "month",
        "name": "Voice Addon 300 Yearly",
        "num_quota_tickets": 300,
        "price_id": "price_1O9TX8I9qXomtXqSR9drzVqz",
        "product": "voice",
        "product_id": "prod_MT6fyh00TCFRGZ",
        "public": true,
      },
      {
        "amount": 0,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 2.4,
        "internal_id": "voc-addon-00-monthly-usd-4",
        "interval": "month",
        "name": "Voice Addon Trial Monthly",
        "num_quota_tickets": 0,
        "price_id": "price_1LkClqI9qXomtXqSlgYCG6Wm",
        "product": "voice",
        "product_id": "prod_MT6fyh00TCFRGZ",
        "public": true,
      },
    ],
    "type": "voice",
  },
  {
    "id": "prod_Mwy3exdalDFouZ",
    "prices": [
      {
        "amount": 0,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 1,
        "internal_id": "convert-00-monthly-usd-5",
        "interval": "month",
        "name": "Convert Trial Monthly",
        "num_quota_tickets": 0,
        "price_id": "price_1NdBfmI9qXomtXqSFfC7T2xX",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 0,
      },
      {
        "amount": 3000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-01-monthly-usd-5",
        "interval": "month",
        "name": "Convert 50 Monthly",
        "num_quota_tickets": 50,
        "price_id": "price_1NdBiMI9qXomtXqSX8MxFkYW",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 1,
      },
      {
        "amount": 25000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-02-monthly-usd-5",
        "interval": "month",
        "name": "Convert 500 Monthly",
        "num_quota_tickets": 500,
        "price_id": "price_1NdXfXI9qXomtXqS0CDMe7Yy",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 2,
      },
      {
        "amount": 80000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-03-monthly-usd-5",
        "interval": "month",
        "name": "Convert 2,000 Monthly",
        "num_quota_tickets": 2000,
        "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSLS",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 3,
      },
      {
        "amount": 110000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-04-monthly-usd-6",
        "interval": "month",
        "name": "Convert 2,000 Monthly",
        "num_quota_tickets": 2000,
        "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSL2",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 4,
      },
      {
        "amount": 157500,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-05-monthly-usd-6",
        "interval": "month",
        "name": "Convert 3,000 Monthly",
        "num_quota_tickets": 3000,
        "price_id": "price_1NmZrmH2GG3UYmlxBGfOOSL1",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 5,
      },
      {
        "amount": 36000,
        "cadence": "month",
        "currency": "usd",
        "custom": false,
        "extra_ticket_cost": 0,
        "internal_id": "convert-01-yearly-usd-6",
        "interval": "year",
        "name": "Convert 600 Yearly",
        "num_quota_tickets": 600,
        "price_id": "price_2NmZrmH2GG3UYmlxBGfOOSL1",
        "product": "convert",
        "product_id": "prod_Mwy3exdalDFouZ",
        "public": true,
        "tier": 1,
      },
    ],
    "type": "convert",
  },
]
`;

exports[`billing selectors makeHasFeature should return if the feature is enabled 1`] = `true`;

exports[`billing selectors makeHasFeature should return if the feature is enabled 2`] = `false`;
